--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -38,6 +38,10 @@
   margin-bottom: 15rem;
 }
 
+.product__grid {
+  margin-bottom: 6rem;
+}
+
 @media screen and (max-width: 989px) {
   .collection .slider--tablet.product-grid {
     scroll-padding-left: 1.5rem;
